# Core3D

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  imgui.ini  input.cpp  input.hpp  main.cpp  makefile  notes.md  player.hpp  point.hpp  rend_test  sdl_test
res/: save1.json
res/shaders/: basic.glsl  basic.shader  debug_shadow.shader  pp.shader  shadow.shader  skybox.shader  texture.glsl
src/: Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GameObject.cpp  GameObject.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Input.cpp  Input.hpp  LightObject.cpp  LightObject.hpp  Player.hpp  Renderer.cpp  Renderer.hpp  ShaderCompiler.hpp  VertData.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  data.hpp  editor.cpp  editor.hpp  gl_assert.cpp  gl_assert.hpp  level0.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  texture.cpp  texture.hpp
